# project-an

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.bundled  Dockerfile.bundled.dockerignore  Makefile  README.md  TODO.md
backend/: pyproject.toml
backend/app/: main.py
backend/tests/: test_main.py
data/: README.md  events-202605-ca.parquet
data/claude-session/: index.html  page-001.html  page-002.html  page-003.html  page-004.html  page-005.html  page-006.html  page-007.html  page-008.html
e2e/: global-teardown.ts  package.json  playwright.config.ts
e2e/scripts/: clean-container.mjs
e2e/tests/: smoke.spec.ts
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  style.css  types.ts
frontend/src/components/: FilterPanel.vue  MetricsTable.vue  ProgressBar.vue  TimeSeriesChart.vue
frontend/src/data/: aggregate.ts  chisquare.ts  country.ts  experiment.ts  metrics.ts  parquet.ts  synthesize.ts  timestamp.ts
frontend/src/workers/: load.worker.ts
frontend/tests/: App.test.ts  aggregate.test.ts  chisquare.test.ts  country.test.ts  experiment.test.ts  metrics.test.ts  parquet.test.ts  synthesize.test.ts
